--- a/app/globals.css
+++ b/app/globals.css
@@ -153,6 +153,14 @@
   --sidebar-ring: #89b4fa;
 }
 
+/* Override tw-animate-css default durations (divided by 2, min 150ms) */
+@theme inline {
+  --animate-accordion-down: accordion-down 150ms ease-out;
+  --animate-accordion-up: accordion-up 150ms ease-out;
+  --animate-collapsible-down: collapsible-down 150ms ease-out;
+  --animate-collapsible-up: collapsible-up 150ms ease-out;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
